terraform_codes/sg.tf
#####Security group for ec2###############
resource "aws_security_group" "app_sg" {
  name   = "node-app-sg"
  vpc_id = aws_vpc.rearc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
########## port 22 cidr use as per requirement, it is optional for this task#########
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#######Security Group for ALB###############
resource "aws_security_group" "alb_sg" {
  name        = "rearc-alb_sg"
  description = "Allow HTTP to ALB"
  vpc_id      = aws_vpc.rearc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
